--- a/src/wikibar-standard.css
+++ b/src/wikibar-standard.css
@@ -27,8 +27,11 @@
 		position: absolute;
 		white-space: nowrap;
 		width: 1px;
+		top: -10000em;
 		}
-
+	.jstElements .hidden {
+			visibility: hidden;
+		}
 	.jstElements.focus {
 		border: 2px solid dodgerblue;
 		padding: 1px 3px 3px 3px;
@@ -36,36 +39,34 @@
 
 	.jstElements button {
 		margin-right : 6px;
-		width : 24px;
+		width: 24px;
 		height: 24px;
 		padding: 4px;
 		border-style: solid;
-		border-width: 1px;
+		border-width: 2px;
 		border-color: #ddd;
-		background-color : #f7f7f7;
-		background-position : 50% 50%;
+		background-color: #f7f7f7;
+		background-position: 50% 50%;
 		background-repeat: no-repeat;
-		outline-color: dodgerblue;
+		position: relative;	
+		outline: 0;		
 		}
 		.jstElements button:hover {
-			border-color : #000;
+			border-color : dodgerblue;
+			}		
+		.jstElements button span {
+			position: absolute;
+			bottom: 30px;
+			background-color: lightyellow;
+			padding: 5px;
+			-webkit-box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
+			-moz-box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
+			box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
+			white-space: nowrap;
 			}
-
-	.jstElements [role="tooltip"] {
-		position:absolute;
-		bottom: 30px;
-		left: 12px;
-		background-color: lightyellow;
-		padding: 5px;
-		-webkit-box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
-		-moz-box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
-		box-shadow: 0px 0px 3px 0px rgba(112,112,112,1);
-		white-space: nowrap;
-		}
-				  
-	.jsBtnContainer {
-		position: relative;
-		}
+			.jstElements button:focus {
+				border-color: dodgerblue;		
+			}
 
 .jstSpacer {
 	width : 0px;
